Changed visibility of the search button, fixed loader

--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -5,6 +5,7 @@
     align-items: center;
     padding: 20px 0px;
     border-bottom: #35393c 1px solid;
+    height: 50px;
 }
 .portfolio-navbar {
     width: 70%;
